--- a/package.json
+++ b/package.json
@@ -25,6 +25,9 @@
     "@angular/router": "~8.2.4",
     "@ngx-translate/core": "^11.0.1",
     "@ngx-translate/http-loader": "^4.0.0",
+    "bootstrap": "^4.4.1",
+    "jquery": "^3.4.1",
+    "popper.js": "^1.16.1",
     "rxjs": "^6.5.3",
     "socket.io-client": "^2.3.0",
     "tslib": "^1.10.0",
