--- a/package.json
+++ b/package.json
@@ -23,10 +23,12 @@
     "@angular/platform-browser": "~8.2.4",
     "@angular/platform-browser-dynamic": "~8.2.4",
     "@angular/router": "~8.2.4",
+    "@fortawesome/fontawesome-free": "^5.12.1",
     "@ngx-translate/core": "^11.0.1",
     "@ngx-translate/http-loader": "^4.0.0",
     "bootstrap": "^4.4.1",
     "jquery": "^3.4.1",
+    "mdbootstrap": "^4.13.0",
     "popper.js": "^1.16.1",
     "rxjs": "^6.5.3",
     "socket.io-client": "^2.3.0",
