--- a/package.json
+++ b/package.json
@@ -29,9 +29,13 @@
     "bootstrap": "^4.4.1",
     "jquery": "^3.4.1",
     "mdbootstrap": "^4.13.0",
+    "moment": "^2.24.0",
     "popper.js": "^1.16.1",
     "rxjs": "^6.5.3",
     "socket.io-client": "^2.3.0",
+    "survey-angular": "^1.5.10",
+    "survey-core": "^1.5.10",
+    "survey-knockout": "^1.5.10",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
   },
