--- a/angular.json
+++ b/angular.json
@@ -118,7 +118,8 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "link-the-masses:serve"
+            "devServerTarget": "link-the-masses:serve",
+            "port": 4201
           },
           "configurations": {
             "production": {
